# geoquery-python-rasterstats

./: .gitignore  CHANGELOG.txt  pyproject.toml
.github/workflows/: test-rasterstats.yml
docs/: index.rst  installation.rst  manual.rst
scripts/: bench_engines.py
src/rasterstats/: io.py  main.py  point.py  utils.py
tests/: test_io.py  test_utils.py  test_zonal.py
