# Note: code auto-formatted with `taplo fmt`
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rasterstats"
description = "Summarize geospatial raster datasets based on vector geometries"
authors = [{ name = "Matthew Perry", email = "perrygeo@gmail.com" }]
readme = "README.rst"
keywords = [
  "gis",
  "geospatial",
  "geographic",
  "raster",
  "vector",
  "zonal statistics",
]
dynamic = ["version"]
license = { text = "BSD-3-Clause" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
  "affine",
  "click >7.1, !=8.2.1",
  "cligj >=0.4",
  "numpy >=1.9",
  "pyogrio",
  "rasterio >=1.0",
  "simplejson",
  "shapely",
]

[project.optional-dependencies]
progress = ["tqdm"]
fiona = ["fiona"]
docs = ["numpydoc", "sphinx", "sphinx-rtd-theme"]
test = [
  "coverage",
  "geopandas",
  "pyshp >=1.1.4",
  "pytest >=4.6",
  "pytest-cov >=2.2.0",
  "simplejson",
]
dev = ["rasterstats[test,fiona]", "ruff", "twine"]

[project.entry-points."rasterio.rio_plugins"]
zonalstats = "rasterstats.cli:zonalstats"
pointquery = "rasterstats.cli:pointquery"

[project.urls]
Documentation = "https://pythonhosted.org/rasterstats/"
"Source Code" = "https://github.com/perrygeo/python-rasterstats"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::UserWarning"]
testpaths = ["tests"]
addopts = "--verbose -rf --cov rasterstats --cov-report html"

[tool.setuptools.dynamic]
version = { attr = "rasterstats._version.__version__" }

[tool.hatch.version]
path = "src/rasterstats/_version.py"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "RUF", # Ruff-specific rules
  "UP",  # pyupgrade
]
ignore = [
  "E501",   # Disable: line too long
  "RUF005", # Disable: Consider iterable unpacking instead of concatenation
]

[tool.ruff]
extend-exclude = ["*.ipynb"]
